Stashed up changes successfully
